# Invest-Researcher

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: data-source-flow-semantics.mdc  minimize-fallbacks.mdc  public-before-private-methods.mdc
.github/workflows/: claude-code-review.yml
backend/: config.py  main.py
backend/api/: admin_users_routes.py  auth_routes.py  deps.py  dto.py  excel_export.py  routes.py  schemas.py  sse.py
backend/application/analysis/: context.py  results.py  score_aggregator.py  service.py  step_registry.py
backend/application/ports/: llm_client.py
backend/domain/: verdict.py
backend/domain/benchmarks/: __init__.py  industry_benchmark.py
backend/domain/dividends/: aggregation.py  amounts.py  history.py  ratios.py  record.py  track_record.py  (+1 more)
backend/infrastructure/: akshare_client.py  disk_cache.py  parsers.py  sqlite_store.py  symbol_resolver.py
backend/repositories/: dividend_repository.py  financial_repository.py  industry_benchmark_repository.py  security_repository.py  symbol_repository.py  user_repository.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.prod  ECS_DEPLOY.md
docker/nginx/: default.prod.conf
docs/: infrastructure-sources-apis.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
scripts/: create_user.py  dev.py  export_analysis_excel.py  probe_a_share_none.py  scan_board_valuation.py  seed_industry_benchmarks.py  sync_stock_symbols.py
(+88 files in other folders)
